last minute polish for #hackers

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <div class="reveal">
       <div class="slides">
         <section data-state="title-slide" data-background="images/beer.png" data-background-size="500px" data-background-repeat="norepeat" data-background-position="bottom right">
+          <style type="text/css">
+            .title-slide .reveal h1 {
+              text-shadow: 0px 0px 24px rgba(0, 0, 0, 0.8)
+            }
+          </style>
           <h1>A Drinking Tour of CasperJS</h1>
           <h3>for screen scraping, testing, and profit</h3>
           <h6>or something like that</h6>
@@ -48,7 +53,7 @@
         <section>
           <img src="images/casperjs.png">
         </section>
-        <section>
+        <section data-background="images/casper22.png" data-background-size="300px" data-background-repeat="norepeat" data-background-position="bottom right">
           <h1><strong><em>NOT</em></strong> that new Centrify thing that Help Desk is installing for everyone</h1>
         </section>
         <section>
